--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -1,4 +1,4 @@
-#This file was created by <karsten> Wed May 19 19:14:36 1999
+#This file was created by <karsten> Thu May 20 17:33:48 1999
 #LyX 1.0 (C) 1995-1999 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass book
@@ -703,15 +703,14 @@ to the
 System wide configuration file
 \layout Standard
 
-Mahogany can be pre-configured on a system wide basis by supplying a Mahogany.con
-f file in either 
+Mahogany can be pre-configured on a system wide basis by supplying a 
 \family typewriter 
-/etc
+M.conf
 \family default 
- or the Mahogany installation directory (e.g.
+ file in the Mahogany installation directory (e.g.
  
 \family typewriter 
-/usr/share/Mahogany
+/usr/share/Mahogany/M.conf
 \family default 
 ).
  The syntax for this configuration file is identical to the user's configuration
